--- a/code_review.css
+++ b/code_review.css
@@ -1,6 +1,7 @@
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 0.7em;
+  background-color: #f8f8f8;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -34,7 +35,7 @@ code {
 }
 
 h1 {
-  color: green;
+  color: #272e37;
   font-size: 6em;
   font-weight: bold;
 }
